JTS-3508/JTS-3563 Replaces "latest" in vaadin doc url with used version
Change-Id: Icbc03ba1a13afebd3559d3862866477e66d3f8d5